external-crates/move/crates/move-cli/tests/move_unit_tests/test_with_warnings/args.exp
Command `test`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING Test
Running Move unit tests
[ PASS    ] 0x42::m::explicit_abort_expect_failure
[ PASS    ] 0x42::m::nop
Test result: OK. Total tests: 2; passed: 2; failed: 0
warning[W09002]: unused variable
  ┌─ ./sources/m.move:2:16
  │
2 │ public fun foo(x: u64): u64 {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

Command `test --silence-warnings`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING Test
Running Move unit tests
[ PASS    ] 0x42::m::explicit_abort_expect_failure
[ PASS    ] 0x42::m::nop
Test result: OK. Total tests: 2; passed: 2; failed: 0
Command `test --silence-warnings --warnings-are-errors`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING Test
Running Move unit tests
[ PASS    ] 0x42::m::explicit_abort_expect_failure
[ PASS    ] 0x42::m::nop
Test result: OK. Total tests: 2; passed: 2; failed: 0
Command `test --warnings-are-errors`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING Test
error[E09002]: unused variable
  ┌─ ./sources/m.move:2:16
  │
2 │ public fun foo(x: u64): u64 {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

